wier/force-app/main/default/objects/Contract_Checklst__c/Contract_Checklst__c.object-meta.xml
<CustomObject>
    <label>Contract Checklist</label>
    <nameField>
        <label>Contract Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>