wier/force-app/main/default/objects/Contract_Checklst__c/fields/Assignee_status__c.field-meta.xml
<CustomField>
    <fullName>Assignee_status__c</fullName>
    <label>Assignee status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>