wier/force-app/main/default/objects/Contract_Checklst__c/fields/Contract_Manager_requires_changes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager_requires_changes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Manager requires changes</label>
    <type>Checkbox</type>
</CustomField>