wier/force-app/main/default/objects/Contract_Checklst__c/fields/Customer_Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Email__c</fullName>
    <label>Customer Support Email</label>
    <type>Email</type>
</CustomField>