wier/force-app/main/default/objects/Contract_Checklst__c/fields/Final_Approval__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final contract manager approval</label>
    <type>Checkbox</type>
</CustomField>