wier/force-app/main/default/objects/Contract_Checklst__c/fields/PO_Attachments__c.field-meta.xml
<CustomField>
    <fullName>PO_Attachments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Attachments</label>
    <referenceTo>PO_Attachments__c</referenceTo>
    <relationshipLabel>Contract Checklists</relationshipLabel>
    <relationshipName>Contract_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>