wier/force-app/main/default/objects/Contract_Checklst__c/fields/Tendering_Manager_Comments__c.field-meta.xml
<CustomField>
    <fullName>Tendering_Manager_Comments__c</fullName>
    <label>Contract Manager&apos;s Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>