wier/force-app/main/default/objects/Contract_Checklst__c/fields/Whether_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Whether_Applicable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Whether Applicable</label>
    <type>Checkbox</type>
</CustomField>