wier/force-app/main/default/objects/Contract_Checklst__c/validationRules/Check_Status_complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Status_complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Assignee_status__c, &quot;Outstanding&quot; ),
Whether_Applicable__c =TRUE,Submit_for_Contract_Manager_Approval__c =TRUE
)</errorConditionFormula>
    <errorMessage>You cannot submit the record until all outstanding task completed.</errorMessage>
</ValidationRule>