wier/force-app/main/default/objects/Contract_Checklst__c/validationRules/Contract_Manager_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Manager_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Assignee_status__c, &quot;Outstanding&quot; ),
Whether_Applicable__c =TRUE, Final_Approval__c =TRUE
)</errorConditionFormula>
    <errorMessage>You cannot approve the record until all outstanding task completed.</errorMessage>
</ValidationRule>