wier/force-app/main/default/objects/Contract_Checklst__c/validationRules/equire_Changes_and_Approva_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>equire_Changes_and_Approva_Manager</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  Final_Approval__c =TRUE,  Require_Changes__c  =TRUE)</errorConditionFormula>
    <errorMessage>You can select either CM Requires Changes/ Clarification  or Customer PO approved BUT NOT BOTH.</errorMessage>
</ValidationRule>