wier/force-app/main/default/objects/Contract_Checklst__c/validationRules/Require_Changes_and_Submit_for_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Changes_and_Submit_for_Contract</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Require_Changes__c =TRUE, Submit_for_Contract_Manager_Approval__c =TRUE)</errorConditionFormula>
    <errorMessage>You can select either Require Changes/ Clarification from Tendering Rep  or Submit for Contract Manager&apos;s Approval BUT NOT BOTH.</errorMessage>
</ValidationRule>