wier/force-app/main/default/objects/Contract_Checklst__c/validationRules/Validate_CM_RequireFinalApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_CM_RequireFinalApproval</fullName>
    <active>true</active>
    <description>Validatin_Contract_Manager_and_require_c</description>
    <errorConditionFormula>AND( Final_Approval__c =TRUE, Contract_Manager_requires_changes__c =TRUE)</errorConditionFormula>
    <errorMessage>You can select either CM Requires Changes/ Clarification  or Customer PO approved BUT NOT BOTH.</errorMessage>
</ValidationRule>